--- a/index.html
+++ b/index.html
@@ -1,18 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap"
+      rel="stylesheet"
+    />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Explorer Marathon</title>
+    <title>Moyses's Social Media</title>
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body class="dark-blue">
-    <div class="container"> 
-      <img src="./assets/Moyses.jpg" alt="Moyses Pimenta's Photo" class="avatar">
+    <div class="container">
+      <img
+        src="./assets/Moyses.jpg"
+        alt="Moyses Pimenta's Photo"
+        class="avatar"
+      />
       <h1>Moyses Pimenta</h1>
       <p class="username">@MoysesPimenta</p>
       <p>
@@ -22,22 +29,27 @@
       </p>
       <ul>
         <li>
-          <a href="https://www.linkedin.com/in/mosheyowork" target="_blank">LinkedIn</a
+          <a href="https://www.linkedin.com/in/mosheyowork" target="_blank"
+            >LinkedIn</a
           >
         </li>
         <li>
-          <a href="https://www.facebook.com/benmuyalmoshe/" target="_blank">Facebook</a
+          <a href="https://www.facebook.com/benmuyalmoshe/" target="_blank"
+            >Facebook</a
           >
         </li>
         <li>
-          <a href="https://www.instagram.com/moysespimenta/" target="_blank">Instagram</a
+          <a href="https://www.instagram.com/moysespimenta/" target="_blank"
+            >Instagram</a
           >
         </li>
         <li>
           <a href="https://github.com/MoysesPimenta" target="_blank">Github</a>
         </li>
         <li>
-          <a href="https://twitter.com/PimentaMoyses" target="_blank">Twitter</a>
+          <a href="https://twitter.com/PimentaMoyses" target="_blank"
+            >Twitter</a
+          >
         </li>
       </ul>
       <footer>Created by Moyses Pimenta ©️ 2023</footer>
